[package]
name = "ble-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.21"
paho-mqtt = "0.11"
serde = "1.0.143"
serde_json = "1.0.83"
clap = { version = "3.2.17", features = ["derive"]}